--- a/style.css
+++ b/style.css
@@ -42,13 +42,23 @@ label {
     color: #1B1F3B;
 }
 
-input {
+input, select {
     width: 100%;
     padding: 12px;
     border: 1px solid #DADCE0;
     border-radius: 12px;
     margin-bottom: 18px;
     font-size: 15px;
+    background-color: white;
+    box-sizing: border-box;
+}
+
+select {
+    appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%231B1F3B' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    padding-right: 35px;
 }
 
 .btn {
@@ -61,9 +71,11 @@ input {
     font-size: 16px;
     cursor: pointer;
     transition: 0.25s;
+    margin-top: 5px;
 }
 
 .btn:hover {
     background: #1A4180;
 }
+
 
